welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: not found: value Maths
	else {return (Maths.abs(n-21))*2}
                      ^