welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
	if (n <= 21) {return 21-n}
	else {return (Maths.abs(n-21))*2}
}
